Add static files handling, add data handling in templates, add bulma styling in the views

--- a/app/templates/_base.html
+++ b/app/templates/_base.html
@@ -5,37 +5,12 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <title>Diseases</title>
-    <style>
-        html,
-        body {
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            position: fixed;
-            top: 0; bottom: 0; left: 0; right: 0;
-        }
-        .navbar {
-            margin: 0;
-            background: #de5149;
-        }
-        .navbar > li:hover {
-            background: #a53d36;
-        }
-        .navbar > li {
-            list-style: none;
-            display: inline-block;
-            padding: 1em;
-        }
-        .navbar > li > a {
-            color: #eee;
-            text-decoration: none;
-        }
-        .container {
-            width: 75%;
-            margin: auto;
-        }
-    </style>
+    
+    <link rel="stylesheet" href="static/css/font-awesome.min.css">
+    <link rel="stylesheet" href="static/css/bulma.css">
+    <link rel="stylesheet" href="static/css/main.css">
 </head>
 <body>
     {% include '_navbar.html' %}
