--- a/app/templates/_navbar.html
+++ b/app/templates/_navbar.html
@@ -1,6 +1,26 @@
-<ul class="navbar">
-    <li><a href="{{ url_for('index') }}">Home</a></li>
-    <li><a href="{{ url_for('get_users') }}">Users</a></li>
-    <li><a href="{{ url_for('get_patients') }}">Patients</a></li>
-    <li><a href="{{ url_for('get_diseases') }}">Diseases</a></li>
-</ul>
+<nav class="navbar is-dark">
+    <div class="navbar-brand">
+      <a class="navbar-item" href="https://bulma.io">
+        <img src="https://bulma.io/images/bulma-logo.png" alt="Bulma: a modern CSS framework based on Flexbox" width="112" height="28">
+      </a>
+  
+      <button class="button navbar-burger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+    </div>
+
+    <div class="navbar-menu">
+        <div class="navbar-start">
+            <a href="{{ url_for('index') }}" class="navbar-item">Home</a>
+            <a href="{{ url_for('get_users') }}" class="navbar-item">Users</a>
+            <a href="{{ url_for('get_patients') }}" class="navbar-item">Patients</a>
+            <a href="{{ url_for('get_diseases') }}" class="navbar-item">Diseases</a>
+        </div>
+      
+        <div class="navbar-end">
+            <a href="{{ url_for('login') }}" class="navbar-item">Log in</a>
+        </div>
+    </div>
+  </nav>
