--- a/app/templates/_title.html
+++ b/app/templates/_title.html
@@ -1,8 +1,8 @@
 <section class="hero is-light">
     <div class="hero-body">
         <div class="container">
-            <h1 class="title"> {{ title }} </h1>
-            <h2 class="subtitle"> {{ subtitle }} </h2>
+            <h3 class="title"> {{ title }} ({{ data.items | count }})</h3>
+            <h4 class="subtitle"> {{ subtitle }} </h4>
         </div>
     </div>
 </section>
