Add html sections, add condition for displaying block of items only when there is at least 1.

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -4,6 +4,12 @@ body {
     padding: 0;
     width: 100%;
 }
+
+/* override Bulma's rule */
+.section {
+    padding: 1.5rem;
+}
+
 .container {
     width: 75%;
     margin: auto;
