Revert "Add number of entries in title"
This reverts commit f75d314ec5b231fca2140344e7d94009fee62481.

--- a/app/templates/_title.html
+++ b/app/templates/_title.html
@@ -1,8 +1,8 @@
 <section class="hero is-light">
     <div class="hero-body">
         <div class="container">
-            <h3 class="title"> {{ title }} ({{ data.items | count }})</h3>
-            <h4 class="subtitle"> {{ subtitle }} </h4>
+            <h1 class="title"> {{ title }} </h1>
+            <h2 class="subtitle"> {{ subtitle }} </h2>
         </div>
     </div>
 </section>
