--- a/app/templates/users.html
+++ b/app/templates/users.html
@@ -5,6 +5,12 @@
 
     <section class="section">
         <div class="container">
+            {% include '_searchbar.html' %}
+        </div>
+    </section>
+
+    <section class="section">
+        <div class="container">
             {% if data.items | count > 0 %}
                 {% for user in data.items %}
                     <div class="box">
