--- a/app/templates/_base.html
+++ b/app/templates/_base.html
@@ -8,9 +8,9 @@
 
     <title>Diseases</title>
     
-    <link rel="stylesheet" href="static/css/font-awesome.min.css">
-    <link rel="stylesheet" href="static/css/bulma.css">
-    <link rel="stylesheet" href="static/css/main.css">
+    <link rel="stylesheet" href="/static/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/static/css/bulma.css">
+    <link rel="stylesheet" href="/static/css/main.css">
 </head>
 <body>
     {% include '_navbar.html' %}
