--- a/app/templates/patients.html
+++ b/app/templates/patients.html
@@ -7,6 +7,9 @@
         <div class="container">
             {% include '_searchbar.html' %}
         </div>
+        <div>
+            <a href="{{ url_for('add_patient') }}">Add patient</a>
+        </div>
     </section>
 
     <section class="section">
