add / edit / view of patient

--- a/app/templates/patient.html
+++ b/app/templates/patient.html
@@ -4,16 +4,90 @@
     {% include '_title.html' %}
 
     <div class="container">
-    <p> TT </p>
+        <div class="columns">
 
-        {#        {{ data.id_assigned_user }}
+            <div class="column">
 
-    <ul>    {{ data.diseases.disease }}#}
-        <ul>
-            {% for d in data.diseases %}
-                <li>{{ d.disease.name }}</li>
-            {% endfor %}
-        </ul>
+                <h3 class="title is-3">Medical</h3>
+
+                <div class="field">
+                    <label class="label">Nurse</label>
+                    <div class="control">
+                        <input class="input" type="text" value="{{ data.user.full_name }}" readonly>
+                    </div>
+                </div>
+
+                <div class="field">
+                    <label class="label">Social number</label>
+                    <div class="control">
+                        <input class="input" type="text" value="{{ data.patient.social_number }}" readonly>
+                    </div>
+                </div>
+                <div class="field">
+                    <label class="label">Latest admission</label>
+                    <div class="control">
+                        <input class="input" type="text" value="{{ data.patient.latest_admission }}" readonly>
+                    </div>
+                </div>
+                <div class="field">
+                    <label class="label">Latest medical exam</label>
+                    <div class="control">
+                        <input class="input" type="text" value="{{ data.patient.latest_medical_exam }}" readonly>
+                    </div>
+                </div>
+
+                <table class="table is-striped">
+                    <thead>
+                    <th>Name</th>
+                    <th>Date</th>
+                    </thead>
+
+                    <tbody>
+                    {% for d in data.patient.diseases %}
+                        <tr>
+                            <th>{{ d.disease.name }}</th>
+                            <th>{{ d.disease.added }}</th>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+
+            <div class="column">
+                <h3 class="title is-3">Patient</h3>
+
+                <div class="field">
+                    <label class="label">Full name</label>
+                    <div class="control">
+                        <input class="input" type="text" value="{{ data.patient.full_name }}" readonly>
+                    </div>
+                </div>
+                <div class="field">
+                    <label class="label">Address</label>
+                    <div class="control">
+                        <input class="input" type="text" value="{{ data.patient.address }}" readonly>
+                    </div>
+                </div>
+                <div class="field">
+                    <label class="label">Email</label>
+                    <div class="control">
+                        <input class="input" type="text" value="{{ data.patient.email }}" readonly>
+                    </div>
+                </div>
+                <div class="field">
+                    <label class="label">Phone</label>
+                    <div class="control">
+                        <input class="input" type="text" value="{{ data.patient.phone }}" readonly>
+                    </div>
+                </div>
+                <div class="field">
+                    <label class="label">Job</label>
+                    <div class="control">
+                        <input class="input" type="text" value="{{ data.patient.job }}" readonly>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 {% endblock %}
