--- a/app/templates/_base.html
+++ b/app/templates/_base.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/static/css/font-awesome.min.css">
     <link rel="stylesheet" href="/static/css/bulma.css">
     <link rel="stylesheet" href="/static/css/main.css">
+    <script type="text/javascript" src="/static/js/script.js"></script>
 </head>
 <body>
     {% include '_navbar.html' %}
