--- a/app/templates/patients.html
+++ b/app/templates/patients.html
@@ -24,7 +24,7 @@
             </div>
             <br>
             {% if data.items | count > 0 %}
-                {% for patient in data.items %}
+                {% for patient in data.items if patient.is_active %}
                     <div class="box">
                         <article class="media">
                             <div class="media-left">
@@ -56,12 +56,35 @@
                                     <div class="level-left">
                                         <a class="level-item" href="{{ url_for('get_edit_patient', id=patient.id) }}">
                                             <span class="icon is-small"> <i class="fa fa-pencil"></i> </span> </a>
-                                        <a class="level-item"> <span class="icon is-small"> <i
-                                                class="fa fa-trash-o"></i> </span> </a>
+                                        <a class="level-item" id="open-delete-modal">
+                                            <span class="icon is-small"> <i class="fa fa-trash-o">
+                                                  <input type="hidden" id="patient_id" value="{{ patient.id }}">
+                                            </i> </span> </a>
                                         <a class="level-item"> <span class="icon is-small"> <i
                                                 class="fa fa-address-book-o"></i> </span> </a>
                                     </div>
                                 </nav>
+                            </div>
+                            <div class="modal" id="delete-modal">
+                                <div class="modal-background" id="background_modal"></div>
+                                <div class="modal-card">
+                                    <header class="modal-card-head">
+                                        <p class="modal-card-title">Confirmation</p>
+                                        <button class="delete" aria-label="close" id="btn-close-modal"></button>
+                                    </header>
+                                    <section class="modal-card-body">
+                                        <p> Do you really want to delete this shitty {{ patient.full_name }} ?</p>
+                                    </section>
+                                    <footer class="modal-card-foot">
+                                        <button class="button" id="btn-cancel-modal">Cancel</button>
+                                        <a href="{{ url_for('delete_patient', id=patient.id) }}"
+                                           id="link_btn_validate">
+                                            <button class="button is-success is-grouped-right" id="btn_validate_modal">
+                                                Delete
+                                            </button>
+                                        </a>
+                                    </footer>
+                                </div>
                             </div>
                         </article>
                     </div>
