Modify Views & Links Add Logo Start modify core

--- a/app/templates/_navbar.html
+++ b/app/templates/_navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar is-dark">
     <div class="navbar-brand">
-      <a class="navbar-item" href="https://bulma.io">
-        <img src="https://bulma.io/images/bulma-logo.png" alt="Bulma: a modern CSS framework based on Flexbox" width="112" height="28">
+      <a class="navbar-item" href="#">
+        <img src="../static/img/weta.png" alt="WETA : Workshop Enhanced Token Administration" width="112" height="28">
       </a>
   
       <button class="button navbar-burger">
@@ -14,9 +14,9 @@
     <div class="navbar-menu">
         <div class="navbar-start">
             <a href="{{ url_for('index') }}" class="navbar-item">Home</a>
-            <a href="{{ url_for('get_users') }}" class="navbar-item">Users</a>
-            <a href="{{ url_for('get_patients') }}" class="navbar-item">Patients</a>
-            <a href="{{ url_for('get_diseases') }}" class="navbar-item">Diseases</a>
+            {#<a href="{{ url_for('get_teams') }}" class="navbar-item">Teams</a>
+            <a href="{{ url_for('get_ideas') }}" class="navbar-item">Ideas</a>
+            <a href="{{ url_for('get_projects') }}" class="navbar-item">Projects</a>#}
         </div>
       
         <div class="navbar-end">
