--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,11 +1,13 @@
 {% extends '_base.html' %}
 
 {% block content %}
-<h3 class="title is-3">Enter your credentials here.</h3>
+<h3 class="title is-3">Entrez vos données de connexion :</h3>
 
 <p>
-    Troubles finding the form?
-    <br>
-    <strong>Don't bother!</strong> It does not exist yet.
+    <strong>Email :</strong>
 </p>
+<p>
+    <strong>Mot de passe :</strong>
+</p>
+
 {% endblock %}
