--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -6,7 +6,7 @@
 
         <div class="card">
             <header class="card-header">
-                <p class="card-header-title"> Latest news </p>
+                <p class="card-header-title"> Workshop</p>
                 <a href="#" class="card-header-icon">
                     <span class="icon">
                         <i class="fa fa-angle-down"></i>
