Modify routes & others

--- a/app/templates/_navbar.html
+++ b/app/templates/_navbar.html
@@ -13,12 +13,11 @@
 
     <div class="navbar-menu">
         <div class="navbar-start">
-            <a href="{{ url_for('index') }}" class="navbar-item">Home</a>
-            {#<a href="{{ url_for('get_teams') }}" class="navbar-item">Teams</a>
-            <a href="{{ url_for('get_ideas') }}" class="navbar-item">Ideas</a>
-            <a href="{{ url_for('get_projects') }}" class="navbar-item">Projects</a>#}
+            <a href="{{ url_for('index') }}" class="navbar-item">Accueil</a>
+            <a href="{{ url_for('get_ideas') }}" class="navbar-item">Idées</a>
+            <a href="{{ url_for('get_projects') }}" class="navbar-item">Projets</a>
+            <a href="{{ url_for('get_teams') }}" class="navbar-item">Equipes</a>
         </div>
-      
         <div class="navbar-end">
             <a href="{{ url_for('login') }}" class="navbar-item">Log in</a>
         </div>
