--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -3,9 +3,10 @@
 {% block content %}
 {% include '_title.html' %}
     <div class="container">
+
         <div class="card">
             <header class="card-header">
-                <p class="card-header-title"> WORKSHOP </p>
+                <p class="card-header-title"> Projets </p>
                 <a href="#" class="card-header-icon">
                     <span class="icon">
                         <i class="fa fa-angle-down"></i>
