--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -11,7 +11,7 @@
                     <p class="card-header-title">Entrez vos données de connexion :</p>
                 </header>
                 <div class="card-content">
-                    <form method="post" action="" enctype="multipart/form-data">
+                    <form method="post" action="{{ url_for('login') }}" enctype="multipart/form-data">
                         <div class="field">
                             <div class="control">
                                 <input class="input" type="text" placeholder="Login" name="login" required>
@@ -29,6 +29,7 @@
                                 <li><a href="/forgotten-password">Mot de passe oublié</a></li>
                             </ul>
                         </nav>
+                        <p class="has-text-danger">{{ error }}</p><br>
                         <div class="field is-grouped">
                             <div class="control">
                                 <button class="button is-link">Se connecter</button>
