Modify routes & others

--- a/app/templates/_navbar.html
+++ b/app/templates/_navbar.html
@@ -17,6 +17,7 @@
             <a href="{{ url_for('get_ideas') }}" class="navbar-item">Idées</a>
             <a href="{{ url_for('get_projects') }}" class="navbar-item">Projets</a>
             <a href="{{ url_for('get_teams') }}" class="navbar-item">Equipes</a>
+            <a href="{{ url_for('get_speakers') }}" class="navbar-item">Intervenants</a>
         </div>
         <div class="navbar-end">
             <a href="{{ url_for('login') }}" class="navbar-item">Log in</a>
